--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: mbstring, pdo_mysql, tokenizer
+          extensions: mbstring, pdo_mysql, tokenizer, bcmath, json
           coverage: none
       - name: Cache Composer dependencies
         uses: actions/cache@v4
@@ -85,14 +85,55 @@ jobs:
             ${{ runner.os }}-php-
       - name: Install dependencies
         run: composer install --no-interaction --no-progress --prefer-dist
-      - name: Prepare environment
+      - name: Setup environment
         run: |
-          cp .env.example .env || true
-          php -r "copy('vendor/nunomaduro/larastan/extension.neon', 'extension.neon');" || true
+          cp .env.example .env || echo "No .env.example found, creating .env"
+          echo "APP_NAME=Lumen" >> .env
+          echo "APP_ENV=testing" >> .env
+          echo "APP_KEY=base64:YXNkZmFzZGZhc2RmYXNkZmFzZGZhc2RmYXNkZmFzZGY=" >> .env
+          echo "APP_DEBUG=true" >> .env
+          echo "APP_URL=http://localhost" >> .env
+          echo "APP_TIMEZONE=UTC" >> .env
+          echo "" >> .env
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=energex" >> .env
+          echo "DB_USERNAME=app" >> .env
+          echo "DB_PASSWORD=app" >> .env
+          echo "" >> .env
+          echo "CACHE_DRIVER=array" >> .env
+          echo "QUEUE_CONNECTION=sync" >> .env
+          echo "" >> .env
+          echo "JWT_SECRET=ChangeThisSecretKeyForProduction123456789012" >> .env
+          echo "JWT_TTL=60" >> .env
+          echo "JWT_REFRESH_TTL=20160" >> .env
+          echo "JWT_ALGO=HS256" >> .env
+      - name: Wait for MySQL
+        run: |
+          while ! mysqladmin ping -h 127.0.0.1 -u app -papp --silent; do
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
+      - name: Run migrations
+        run: php artisan migrate --force
+        env:
+          APP_ENV: testing
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: energex
+          DB_USERNAME: app
+          DB_PASSWORD: app
+      - name: Clear config cache
+        run: |
+          php artisan cache:clear || true
       - name: Run PHPUnit
         run: vendor/bin/phpunit --testdox
         env:
           APP_ENV: testing
+          APP_KEY: base64:YXNkZmFzZGZhc2RmYXNkZmFzZGZhc2RmYXNkZmFzZGY=
+          JWT_SECRET: ChangeThisSecretKeyForProduction123456789012
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
