--- a/backend-lumen/.gitignore
+++ b/backend-lumen/.gitignore
@@ -4,3 +4,11 @@ Homestead.json
 Homestead.yaml
 .env
 .phpunit.result.cache
+/bootstrap/cache/*
+!/bootstrap/cache/.gitkeep
+/storage/logs/*
+!/storage/logs/.gitkeep
+/storage/framework/cache/*
+!/storage/framework/cache/.gitkeep
+/storage/framework/views/*
+!/storage/framework/views/.gitkeep
